2005-05-12  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (emit_ptr_to_object_conv): Implement ftnptr->delegate
	conversion in structures. Fixes #74882.

2005-05-12  Atsushi Enomoto  <atsushi@ximian.com>

	* culture-info-table.h : zh-* cultures were missing.

2005-05-12  Lluis Sanchez Gual  <lluis@novell.com>

	* threads.c: Added a new event background_change_event which is signaled
	when a thread changes its background mode.
	Moved here several checks previously done in managed code. The checks
	require the thread lock, and using the thread lock in managed code
	can result in deadlocks.
	Merged Start_internal and Thread_internal into a single method. Now 
	Thread_internal does all work of creating and starting a thread.
	Added icalls for setting and getting the state of the object. Moved from
	managed code to avoid locking there.
	Added wait_for_tids_or_state_change() which is called instad of
	wait_for_tids when waiting for non-backround threads to end. This method
	will return if one of the threads ends or the background_change_event
	is signaled.
	* threadpool.c: use ves_icall_System_Threading_Thread_SetState() to set
	the background mode. This method signals the background_change_event
	event.
	* icall.c:
	* threads-types.h: Added icalls for ClrState, SetState and GetState, and
	removed Start_internal.
	
2005-05-11  Martin Baulig  <martin@ximian.com>

	* mono-debug.h (MonoSymbolTable, MonoDebugMethodAddress): Changed
	to order of some fields to get proper alignment on 64-bit machines.

2005-05-11  Martin Baulig  <martin@ximian.com>

	* mono-debug.c, mono-debug-debugger.c: Revert Paolo's locking
	changes as they're broken and completely fuck up the debugger.

	* mono-debug.c (mono_debug_add_method): Properly unlock on error.

2005-05-10  Martin Baulig  <martin@ximian.com>

	* reflection.c (mono_reflection_generic_class_initialize): Don't
	call mono_class_setup_parent() here.

2005-05-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>
